--- a/ch.vorburger.hotea.minecraft2/pom.xml
+++ b/ch.vorburger.hotea.minecraft2/pom.xml
@@ -22,6 +22,11 @@
             <version>2.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>ch.vorburger.hotea.minecraft</groupId>
+            <artifactId>api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 		<dependency>
 			<groupId>ch.vorburger</groupId>
 			<artifactId>hotea</artifactId>
