--- a/ch.vorburger.hotea.minecraft.api/pom.xml
+++ b/ch.vorburger.hotea.minecraft.api/pom.xml
@@ -5,7 +5,11 @@
 	<groupId>ch.vorburger.hotea.minecraft</groupId>
 	<artifactId>api</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	
+
+    <build>
+        <finalName>${project.groupId}.${project.artifactId}-${project.version}</finalName>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.spongepowered</groupId>
