--- a/ch.vorburger.hotea.minecraft2/pom.xml
+++ b/ch.vorburger.hotea.minecraft2/pom.xml
@@ -7,21 +7,6 @@
 	<version>1.0.0-SNAPSHOT</version>
 
 	<dependencies>
-<!--
-		<dependency>
-			<groupId>org.spongepowered</groupId>
-			<artifactId>spongeapi</artifactId>
-			<version>2.1-SNAPSHOT</version>
-			<scope>provided</scope>
-		</dependency>
- -->
-        <dependency>
-            <groupId>org.spongepowered</groupId>
-            <!-- TODO SpongeVanilla instead of API (and remove short-term Eclipse project dependency hack) -->
-            <artifactId>spongeapi</artifactId>
-            <version>2.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
         <dependency>
             <groupId>ch.vorburger.hotea.minecraft</groupId>
             <artifactId>api</artifactId>
@@ -32,11 +17,18 @@
 			<artifactId>hotea</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
+		
 		<dependency>
-		    <groupId>org.ow2.asm</groupId>
-		    <artifactId>asm-debug-all</artifactId>
-		    <version>5.0.4</version>
-            <scope>provided</scope>
+            <groupId>org.spongepowered</groupId>
+            <artifactId>spongevanilla</artifactId>
+            <version>1.8.9-4.1.0-BETA-271</version>
+		    <scope>provided</scope>
+		    <exclusions>
+		    	<exclusion>
+		    		<artifactId>launchwrapper</artifactId>
+		    		<groupId>net.minecraft</groupId>
+		    	</exclusion>
+		    </exclusions>
 		</dependency>
 	</dependencies>
 
@@ -54,6 +46,21 @@
 	</build>
 
 	<repositories>
+<!--
+		<repository>
+			<id>jcenter</id>
+			<url>http://jcenter.bintray.com </url>
+			<snapshots>
+				<enabled>false</enabled>
+				<updatePolicy>never</updatePolicy>
+				<checksumPolicy>warn</checksumPolicy>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+				<checksumPolicy>warn</checksumPolicy>
+			</releases>
+		</repository>
+ -->
 		<repository>
 			<id>sponge-maven-repo</id>
 			<name>Sponge maven repo</name>
