--- a/ch.vorburger.hotea.minecraft2/pom.xml
+++ b/ch.vorburger.hotea.minecraft2/pom.xml
@@ -17,11 +17,11 @@
 			<artifactId>hotea</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
-		
 		<dependency>
             <groupId>org.spongepowered</groupId>
             <artifactId>spongevanilla</artifactId>
-            <version>1.8.9-4.1.0-BETA-271</version>
+            <version>1.8.9-4.1.0-HoTea.vorburger.ch-BETA-273</version>
+            <classifier>dev</classifier>
 		    <scope>provided</scope>
 		    <exclusions>
 		    	<exclusion>
@@ -31,7 +31,6 @@
 		    </exclusions>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -44,7 +43,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
 	<repositories>
 <!--
 		<repository>
