--- a/ch.vorburger.hotea.minecraft.api/pom.xml
+++ b/ch.vorburger.hotea.minecraft.api/pom.xml
@@ -3,34 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>ch.vorburger.hotea.minecraft</groupId>
-	<artifactId>api</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<artifactId>HotPluginManager-API</artifactId>
+	<version>1.0.0</version>
 
-    <build>
-        <finalName>${project.groupId}.${project.artifactId}-${project.version}</finalName>
-    </build>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.spongepowered</groupId>
-            <artifactId>spongeapi</artifactId>
-            <version>4.1.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
-
-    <repositories>
-        <repository>
-            <id>sponge-maven-repo</id>
-            <name>Sponge maven repo</name>
-            <url>http://repo.spongepowered.org/maven</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-	
 </project>
