--- a/ch.vorburger.hotea.minecraft/.classpath
+++ b/ch.vorburger.hotea.minecraft/.classpath
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="output" path="bin"/>
 	<classpathentry kind="src" path="src/main/java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="output" path="target/classes"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8/"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/ch/vorburger/hotea/1.0.0-SNAPSHOT/hotea-1.0.0-SNAPSHOT.jar"/>
+	<classpathentry sourcepath="/home/vorburger/.m2/repository/junit/junit/4.12/junit-4.12-sources.jar" kind="lib" path="/home/vorburger/.m2/repository/junit/junit/4.12/junit-4.12.jar"/>
+	<classpathentry sourcepath="/home/vorburger/.m2/repository/org/spongepowered/spongeapi/4.1.0-SNAPSHOT/spongeapi-4.1.0-SNAPSHOT-sources.jar" kind="lib" path="/home/vorburger/.m2/repository/org/spongepowered/spongeapi/4.1.0-SNAPSHOT/spongeapi-4.1.0-SNAPSHOT.jar"/>
+	<classpathentry sourcepath="/home/vorburger/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3-sources.jar" kind="lib" path="/home/vorburger/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/ninja/leaping/configurate/configurate-hocon/3.1.1/configurate-hocon-3.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/com/flowpowered/flow-math/1.0.1/flow-math-1.0.1.jar"/>
+	<classpathentry sourcepath="/home/vorburger/.m2/repository/org/spongepowered/plugin-meta/0.1.1/plugin-meta-0.1.1-sources.jar" kind="lib" path="/home/vorburger/.m2/repository/org/spongepowered/plugin-meta/0.1.1/plugin-meta-0.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/org/ow2/asm/asm/5.0.3/asm-5.0.3.jar"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/ninja/leaping/configurate/configurate-yaml/3.1.1/configurate-yaml-3.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/com/google/code/findbugs/jsr305/1.3.9/jsr305-1.3.9.jar"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/ninja/leaping/configurate/configurate-gson/3.1.1/configurate-gson-3.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/com/google/inject/guice/4.0/guice-4.0.jar"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/org/spongepowered/event-gen-core/1.1.0/event-gen-core-1.1.0.jar"/>
+	<classpathentry sourcepath="/home/vorburger/.m2/repository/com/google/code/gson/gson/2.2.4/gson-2.2.4-sources.jar" kind="lib" path="/home/vorburger/.m2/repository/com/google/code/gson/gson/2.2.4/gson-2.2.4.jar"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/com/google/guava/guava/17.0/guava-17.0.jar"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/com/flowpowered/flow-noise/1.0.1-SNAPSHOT/flow-noise-1.0.1-SNAPSHOT.jar"/>
+	<classpathentry sourcepath="/home/vorburger/.m2/repository/org/apache/commons/commons-lang3/3.3.2/commons-lang3-3.3.2-sources.jar" kind="lib" path="/home/vorburger/.m2/repository/org/apache/commons/commons-lang3/3.3.2/commons-lang3-3.3.2.jar"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/com/typesafe/config/1.3.0/config-1.3.0.jar"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/ninja/leaping/configurate/configurate-core/3.1.1/configurate-core-3.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/org/yaml/snakeyaml/1.16/snakeyaml-1.16.jar"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/javax/inject/javax.inject/1/javax.inject-1.jar"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/aopalliance/aopalliance/1.0/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/org/slf4j/slf4j-api/1.7.19/slf4j-api-1.7.19.jar"/>
+	<classpathentry kind="lib" path="/home/vorburger/.m2/repository/ch/vorburger/hotea/minecraft/HotPluginManager-API/1.0.0/HotPluginManager-API-1.0.0.jar"/>
 </classpath>
