Fix EclipseClasspathFileReader for JRE_CONTAINER
and better IllegalArgumentException incl. .classpath location

--- a/ch.vorburger.hotea/src/test/resources/.classpath
+++ b/ch.vorburger.hotea/src/test/resources/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/main/xtend-gen"/>
 	<classpathentry kind="src" path="build/xtend/main"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8/"/>
 	<classpathentry sourcepath="/home/vorburger/.gradle/caches/modules-2/files-2.1/org.eclipse.xtend/org.eclipse.xtend.lib/2.9.2/fa8ac6ea58dacbae64551630d90e9c2a978beb6/org.eclipse.xtend.lib-2.9.2-sources.jar" kind="lib" path="/home/vorburger/.gradle/caches/modules-2/files-2.1/org.eclipse.xtend/org.eclipse.xtend.lib/2.9.2/e267e95ac8eb2e100a6c4f8916e070186ac8b34b/org.eclipse.xtend.lib-2.9.2.jar"/>
 	<classpathentry sourcepath="/home/vorburger/.gradle/caches/modules-2/files-2.1/junit/junit/4.12/a6c32b40bf3d76eca54e3c601e5d1470c86fcdfa/junit-4.12-sources.jar" kind="lib" path="/home/vorburger/.gradle/caches/modules-2/files-2.1/junit/junit/4.12/2973d150c0dc1fefe998f834810d68f278ea58ec/junit-4.12.jar"/>
 	<classpathentry sourcepath="/home/vorburger/.gradle/caches/modules-2/files-2.1/org.eclipse.xtext/org.eclipse.xtext.xbase.lib/2.9.2/300b8a609cadbf433445880ab3c19eeecdfbbd50/org.eclipse.xtext.xbase.lib-2.9.2-sources.jar" kind="lib" path="/home/vorburger/.gradle/caches/modules-2/files-2.1/org.eclipse.xtext/org.eclipse.xtext.xbase.lib/2.9.2/a4c4bc06e20da9f5365887bba8ca754004e93879/org.eclipse.xtext.xbase.lib-2.9.2.jar"/>
