Swing demo works again, with clean Maven, and README

--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,7 @@
 
 	<modules>
 		<module>ch.vorburger.hotea</module>
+        <module>ch.vorburger.hotea.examples.swing-demo</module>
+		<module>ch.vorburger.hotea.examples.swing</module>
 	</modules>
 </project>
