--- a/ch.vorburger.hotea/pom.xml
+++ b/ch.vorburger.hotea/pom.xml
@@ -23,6 +23,7 @@
     </build>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>1.7.19</slf4j.version>
     </properties>
 
