--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <modules>
         <module>ch.vorburger.hotea</module>
         <module>ch.vorburger.hotea.examples.swing-demo</module>
